# HallBot

./: .gitmodules
android/Hallbot2/app/: CMakeLists.txt  build.gradle
android/Hallbot2/app/src/androidTest/java/cpre575/hallbot2/: ExampleInstrumentedTest.java
android/Hallbot2/app/src/main/: AndroidManifest.xml
android/Hallbot2/app/src/main/cpp/: IntersectModel.hpp  VanishingPoint.cpp  native-lib.cpp
android/Hallbot2/app/src/main/cpp/GRANSAC/examples/: LineFittingSample.cpp  LineModel.hpp
android/Hallbot2/app/src/main/cpp/GRANSAC/include/: GRANSAC.hpp
android/Hallbot2/app/src/main/java/cpre575/hallbot2/: MainActivity.java  OpenCVTest0.java  OpenCVTestHough.java
android/Hallbot2/app/src/main/res/layout/: activity_main.xml  activity_open_cvtest0.xml  activity_open_cvtest_hough.xml  content_open_cvtest0.xml  content_open_cvtest_hough.xml
android/Hallbot2/app/src/main/res/values/: strings.xml  styles.xml
android/Hallbot2/app/src/test/java/cpre575/hallbot2/: ExampleUnitTest.java
android/Hallbot2/gradle/wrapper/: gradle-wrapper.properties
matlab/: testbed.m
opencv/: Makefile  README  config.yml  config_file.yml  config_webcam.yml  model_test.cpp  robot_test.cpp  slam_config_phone.yml  slam_config_pi.yml
opencv/src/: .iRobot.cpp.swp  CloudComputer.cpp  CloudComputer.hpp  ComplementaryFilter.cpp  ComplementaryFilter.hpp  Config.cpp  Config.hpp  DeviceBuilder.cpp  DeviceBuilder.hpp  DeviceManager.cpp  DeviceManager.hpp  DeviceRegistration.cpp  DeviceRegistration.hpp  Driver.cpp  Driver.hpp  EdgeDetector.cpp  EdgeDetector.hpp  Floorplan.hpp  HoughLines_Demo.cpp  HoughTransform.cpp  HoughTransform.hpp  IConfigurable.cpp  IConfigurable.hpp  IntersectModel.cpp  IntersectModel.hpp  Log.cpp  Log.hpp  PID.cpp  PID.hpp  SerialPort.cpp  SerialPort.hpp  Slammer.cpp  Slammer.hpp  VRPN.cpp  VRPN.hpp  VanishingPointDetector.cpp  VanishingPointDetector.hpp  VideoDevice.cpp  VideoDevice.hpp  VideoFileDevice.cpp  (+9 more)
opencv/src/pi/: RaspicamDevice.cpp  RaspicamDevice.hpp
pointcloud/: CMakeLists.txt  CMakeLists.txt~  pcl_testing.cpp  pcl_testing.cpp~
