set (CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_testing pcl_testing.cpp)
target_link_libraries(pcl_testing ${PCL_LIBRARIES})

